<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/add_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            android:inputType="number"/>

        <EditText
            android:id="@+id/add_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_quantity"
            android:inputType="number"/>

        <Button
            android:id="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_picture" />

        <ImageView
            android:id="@+id/selected_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button" />
    </LinearLayout>
</ScrollView>