<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_img"
                style="@style/product_img" />

            <TextView
                android:id="@+id/display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quantity : " />

                <TextView
                    android:id="@+id/display_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/price_symbol" />

                <TextView
                    android:id="@+id/display_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NOW ORDER!" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="QUANTITY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quantity_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/input_increase" />

                <EditText
                    android:id="@+id/input_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quantity_reduce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/input_decrease" />

                <EditText
                    android:id="@+id/input_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sell_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_product" />

                <Button
                    android:id="@+id/receive_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receive_product" />
            </LinearLayout>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_product" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/save_info" />
    </RelativeLayout>
</ScrollView>