<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/product_name"
        style="@style/product_name"
        android:fontFamily="monospace" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_symbol" />

            <TextView
                android:id="@+id/product_price"
                style="@style/product_price" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/quantity_title" />

                <TextView
                    android:id="@+id/product_quantity"
                    style="@style/product_quantity" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sale_button"
            style="@style/sale_button"
            android:focusable="false"
            android:text="@string/sell_product" />


    </RelativeLayout>
</LinearLayout>